   definition is expanded. This change can greatly facilitate the use of
   macros defined in $ATSHOME/prelude/macrodef.sats

2. macro expansion is now handled by [d1exp_tr] in [ats_trans2_dyn1.dats]
   (instead of being done by [d2exp_tr] in [ats_trans3_dyn2.dats])
*)

3. The semantics for symbol overloading is greatly simplified.

########################################################################

ats-lang-anairiats-0.1.8:

1. string generation functions have been modified to return linear strings
   that can be freed.

2. $extype_struct is introduced to interface with C structs

3. Fixing a serious mistake causing static unification variable to be
   wrongly tagged.

########################################################################

ats-lang-anairiats-0.1.7:

1. Adding support for implementing variadic functions in ATS.
   Please see the files: $ATSHOME/libc/?ATS/stdarg.?ats

2. Adding a check to detect looping caused by recursive staloading
   and/or including

3. Overhauling [prelude/SATS/array.sats]

4. Adding support for special constants $FILENAME and $LOCATION.

########################################################################

ats-lang-anairiats-0.1.6:

1. Support for OOP is under development. So far, typechecking is done.

2. Type error message reporting is made more informative. This is ongoing.

3. Adding $ATSHOME/ccomp/lib64 for storing libfiles for 64-bit machines.

4. Makefiles are re-designed by Likai Liu.

########################################################################

ats-lang-anariats-0.1.5:

1. A character whose ascii code is greater than 127 is treated as the null
   character by the ATS lexer. So any chars can now appear in comments.

2. Some location information is reported when a match failure occurs at
   run-time.

3. [atscc] now returns a nonzero exit status to the OS if compilation does
   not finish normally.

4. various list functions (e.g., list_map_* functions) now return linear