@@ -48,7 +48,7 @@
 <LI> <A href="#acknowledgments">Acknowledgments</A>
 
 <LI> <A href="#download_and_installation">Download and Installation</A>:
-The current <B>stable</B> release is <a href="http://sourceforge.net/projects/ats-lang/download">ats-lang-anairiats-0.1.8</a> (1.7MB)
+The current <B>stable</B> release is <a href="http://sourceforge.net/projects/ats-lang/download">ats-lang-anairiats-0.1.9</a> (1.8MB)
 
 <LI> <A href="#simple_ats_programs">Some Simple ATS Programs</A>
 </MENU>
