@@ -22,6 +22,18 @@ stadef HASHTBLptr = $H.HASHTBLptr
 (* ****** ****** *)
 
 implement
+$H.item_nullify<string> (stropt) = let
+  val () = stropt := __cast (null) where {
+    extern castfn __cast (x: ptr null):<> string
+  } // end of [val]
+  prval () = __assert (stropt) where {
+    extern prfun __assert (x: &string >> $H.Opt string):<> void
+  } // end of [prval]
+in
+  // nothing
+end // end of [item_nullify]
+
+implement
 $H.item_isnot_null<string> (stropt) = let
   extern castfn __cast
     (x: !($H.Opt string) >> opt (string, l <> null)):<> #[l:addr] ptr l
@@ -41,10 +53,31 @@ end // end of [item_isnot_null]
 ** function seems to be less than 5% (more like a 3%)
 *)
 
-// (*
-implement $H.hash_key<int> (x, _) = ulint_of_int (x)
+//
+// Robert Jenkin's 32-bit function:
+//
+%{^
+ats_int_type
+__jenkin32 (ats_int_type x) {
+  uint32_t a = x ;
+  a = (a+0x7ed55d16) + (a<<12);
+  a = (a^0xc761c23c) ^ (a>>19);
+  a = (a+0x165667b1) + (a<<5);
+  a = (a+0xd3a2646c) ^ (a<<9);
+  a = (a+0xfd7046c5) + (a<<3);
+  a = (a^0xb55a4f09) ^ (a>>16);
+  return a;
+} // end of [__jenkin]
+%} // end of [%{^]
+extern fun __jenkin32 (x: int):<> int = "__jenkin32"
+implement
+$H.hash_key<int> (x, _) = let
+  val h = __jenkin32 (x) in ulint_of_int (h)
+end // end of [hash_key]
+
 implement $H.equal_key_key<int> (x1, x2, _) = (x1 = x2)
-// *)
+
+(* ****** ****** *)
 
 implement main (argc, argv) = let
   val () = gc_chunk_count_limit_max_set (~1) // infinite
@@ -122,14 +155,20 @@ implement main (argc, argv) = let
 //
   val () = find (ptbl, k10000, res)
 //
+  var i: int; val () = for (i := 0; i < n; i := i+1) let
+    val key = i
+    // val key = $RAND.randint n
+    val ans = $H.hashtbl_remove<key,itm> (ptbl, key, res)
+    prval () = opt_clear (res)
+  in
+    // nothing
+  end // end [for]
+//
   val total = $H.hashtbl_total (ptbl)
   val () = (print "total(aft) = "; print total; print_newline ())
-  val () = $H.hashtbl_free (ptbl)
-(*
   val notfreed = $H.hashtbl_free_vt (ptbl)
   val () = assert_errmsg (notfreed = false, #LOCATION)
   prval () = opt_unnone (ptbl)
-*)
 in
   // empty
 end // end of [main]
