@@ -42,7 +42,7 @@
 
 #define ATS_MAJOR_VERSION 0
 #define ATS_MINOR_VERSION 1
-#define ATS_MICRO_VERSION 8
+#define ATS_MICRO_VERSION 9
 
 (* ****** ****** *)
 
