@@ -14,6 +14,16 @@ ats-lang-anairiats-0.1.9:
 
 3. The semantics for symbol overloading is greatly simplified.
 
+4. Adding libc/sched based on /usr/include/sched.x
+
+5. Adding libats/parworkshop to support multicore programming.
+
+6. The examples in doc/EXAMPLE/MULTICORE are modified to run again.
+
+7. Adding support for lliunt and ullint.
+
+......
+
 ########################################################################
 
 ats-lang-anairiats-0.1.8:
